<resources>
    <string name="app_name">Hobby App</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password">Forgot Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_reg_in_short">Register</string>
    <string name="action_reg">Register</string>
    <string name="prompt_add_hobby">Add Hobby</string>
    <string name="add_hobby">Add</string>
    <string name="no_hobby">Your hobbies appear here</string>
</resources>
