<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/add_hobby"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_add_hobby"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/add_hobby_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:layout_marginTop="3dp"
                android:text="@string/add_hobby"
                android:layout_gravity="right"/>



        </LinearLayout>



    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/hobbies_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >

    </android.support.v7.widget.RecyclerView>
    <TextView
        android:id="@+id/no_hobbies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_hobby"
        android:layout_marginLeft="70dp"
        android:layout_marginStart="70dp"
        android:layout_gravity="center"
        android:visibility="invisible"/>
    <ProgressBar
        android:id="@+id/dashboard_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>


</LinearLayout>
